rails-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgy-app
  namespace: kislay-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgy-app
  template:
    metadata:
      labels:
        app: budgy-app
    spec:
      containers:
        - name: budgy-app
          image: iezkislay/budget-app:latest 
          ports:
            - containerPort: 3000
