rails-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgy-app
  namespace: kislay-app
spec:
  selector:
    app: budgy-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
